@@ -255,9 +255,21 @@ namespace Mono.Cecil {
 				GenericParameter a = x as GenericParameter;
 				GenericParameter b = y as GenericParameter;
 
-				return Comparer.Default.Compare (
-					Utilities.CompressMetadataToken (CodedIndex.TypeOrMethodDef, a.Owner.MetadataToken),
-					Utilities.CompressMetadataToken (CodedIndex.TypeOrMethodDef, b.Owner.MetadataToken));
+				uint ta = Utilities.CompressMetadataToken (CodedIndex.TypeOrMethodDef, a.Owner.MetadataToken);
+				uint tb = Utilities.CompressMetadataToken (CodedIndex.TypeOrMethodDef, b.Owner.MetadataToken);
+
+				if (ta < tb)
+					return -1;
+				else if (ta > tb)
+					return 1;
+				else {
+					if (a.Position < b.Position)
+						return -1;
+					else if (a.Position > b.Position)
+						return 1;
+					else
+						return 0;
+				}
 			}
 		}
 	}
